modified:   index.html

--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
     <meta name="format-detection" content="email=no" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <title>SALT | Device Authentication</title>
-    <link rel="stylesheet" href="/css/slick.css" />
-    <link rel="stylesheet" href="/css/magnific-popup.css" />
+    <link rel="stylesheet" href="./css/slick.css" />
+    <link rel="stylesheet" href="./css/magnific-popup.css" />
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="/css/style.css" />
-    <link rel="icon" href="/favicon.ico" sizes="256x256" />
-    <link rel="apple-touch-icon-precomposed" href="/favicon.ico" />
-    <meta name="msapplication-TileImage" content="/favicon.ico" />
+    <link rel="stylesheet" href="./css/style.css" />
+    <link rel="icon" href="./favicon.ico" sizes="256x256" />
+    <link rel="apple-touch-icon-precomposed" href="./favicon.ico" />
+    <meta name="msapplication-TileImage" content="./favicon.ico" />
   </head>
 
   <body>
@@ -29,7 +29,7 @@
       <div class="header__menu menu">
         <div class="menu__body">
           <a href="/" class="menu__logo"
-            ><img src="/img/logo.png" alt="Salt"
+            ><img src="./img/logo.png" alt="Salt"
           /></a>
         </div>
         <div class="menu__burger">
@@ -72,7 +72,7 @@
                 <button class="slide__btn">GET STARTED</button>
               </div>
               <div class="slide__img">
-                <img src="/img/header/bird.png" alt="" />
+                <img src="./img/header/bird.png" alt="" />
               </div>
             </div>
           </div>
@@ -89,7 +89,7 @@
                 <button class="slide__btn">GET STARTED</button>
               </div>
               <div class="slide__img">
-                <img src="/img/header/bird.png" alt="" />
+                <img src="./img/header/bird.png" alt="" />
               </div>
             </div>
           </div>
@@ -103,7 +103,7 @@
                 <button class="slide__btn">GET STARTED</button>
               </div>
               <div class="slide__img">
-                <img src="/img/header/bird.png" alt="" />
+                <img src="./img/header/bird.png" alt="" />
               </div>
             </div>
           </div>
@@ -167,7 +167,7 @@
     <div class="do__box">
       <div class="do__item">
         <div class="do__wrap">
-          <div class="do__img"><img src="/img/do/01.png" alt="" /></div>
+          <div class="do__img"><img src="./img/do/01.png" alt="" /></div>
           <div class="do__subtitle">Device Authentication</div>
           <div class="do__text">
             Hardware-based device fingerprinting resilient to cloning, malware
@@ -179,7 +179,7 @@
       </div>
       <div class="do__item">
         <div class="do__wrap">
-          <div class="do__img"><img src="/img/do/02.png" alt="" /></div>
+          <div class="do__img"><img src="./img/do/02.png" alt="" /></div>
           <div class="do__subtitle">User Authentication</div>
           <div class="do__text">
             Verify the identity of users for access control with contemporary
@@ -189,7 +189,7 @@
       </div>
       <div class="do__item">
         <div class="do__wrap">
-          <div class="do__img"><img src="/img/do/03.png" alt="" /></div>
+          <div class="do__img"><img src="./img/do/03.png" alt="" /></div>
           <div class="do__subtitle">Transaction Authentication</div>
           <div class="do__text">
             High assurance out-of-band authentication of high impact
@@ -201,7 +201,7 @@
       </div>
       <div class="do__item">
         <div class="do__wrap">
-          <div class="do__img"><img src="/img/do/04.png" alt="" /></div>
+          <div class="do__img"><img src="./img/do/04.png" alt="" /></div>
           <div class="do__subtitle">Contemporary authentication methods</div>
           <div class="do__text">
             Echidna authentication server to enable adaptive risk-based approach
@@ -216,7 +216,7 @@
       </div>
       <div class="do__item">
         <div class="do__wrap">
-          <div class="do__img"><img src="/img/do/05.png" alt="" /></div>
+          <div class="do__img"><img src="./img/do/05.png" alt="" /></div>
           <div class="do__subtitle">HSM Solutions</div>
           <div class="do__text">
             Reseller of Thales nShield HSMs with professional services and
@@ -227,7 +227,7 @@
       </div>
       <div class="do__item">
         <div class="do__wrap">
-          <div class="do__img"><img src="/img/do/06.png" alt="" /></div>
+          <div class="do__img"><img src="./img/do/06.png" alt="" /></div>
           <div class="do__subtitle">Cloud & IoT Security</div>
           <div class="do__text">
             Secure the identity and access of users, devices and Internet of
@@ -258,10 +258,10 @@
       </div>
       <div class="product__item">
         <a href="https://vimeo.com/107426942" class="product__video">
-          <img src="/img/product/video-bg.jpg" alt="" />
+          <img src="./img/product/video-bg.jpg" alt="" />
           <div class="product__preview preview">
             <div class="preview__img">
-              <img src="/img/product/icon.png" alt="" />
+              <img src="./img/product/icon.png" alt="" />
             </div>
             <div class="preview__text">Feature video</div>
             <div class="preview__title">mSign Connected token</div>
@@ -387,7 +387,7 @@
                     </nav>
                 </div>
                 <div class="footer__logo">
-                    <img src="/img/logo-footer.png" alt="">
+                    <img src="./img/logo-footer.png" alt="">
                 </div>
             </div>
         </div>
@@ -406,9 +406,9 @@
 </footer>
 <!-- end footer -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <script src="/js/slick.min.js"></script>
-    <script src="/js/jquery.magnific-popup.min.js"></script>
+    <script src="./js/slick.min.js"></script>
+    <script src="./js/jquery.magnific-popup.min.js"></script>
     <script async src="https://platform.twitter.com/widgets.js"></script>
-    <script src="/js/main.js"></script>
+    <script src="./js/main.js"></script>
   </body>
 </html>
